# code_review_env

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  submission_summary.txt  validator.py
server/: Dockerfile  app.py  environment.py
