[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "A real-world code review RL environment built with OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "numpy",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/your_username/code-review-env"

[tool.setuptools.packages.find]
where = ["."]
```
